compiler/testData/diagnostics/jvmIntegration/modules/internalJdkPackageUsage.kt
// JDK_KIND: FULL_JDK_11
val z: sun.jvmstat.monitor.<!JAVA_MODULE_DOES_NOT_EXPORT_PACKAGE!>Monitor<!>? = null
